Fix: improve category slider navigation on mobile and tablet

--- a/src/components/ui/CategorySlider.module.css
+++ b/src/components/ui/CategorySlider.module.css
@@ -141,11 +141,16 @@
     height: 140px;
   }
   
+  .navButton {
+    width: 40px;
+    height: 40px;
+  }
+  
   .prevButton {
-    left: -10px;
+    left: -5px;
   }
   
   .nextButton {
-    right: -10px;
+    right: -5px;
   }
 }
